force-app/main/default/objects/Press_Run__c/Press_Run__c.object-meta.xml
<CustomObject>
    <description>The subscriptions and products scheduled for delivery by date.</description>
    <label>Press Run</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Press Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Press Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>