force-app/main/default/objects/Press_Run__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address for the delivery</description>
        <label>Delivery Address</label>
        <referenceTo>Delivery_Address__c</referenceTo>
        <relationshipLabel>Press Runs</relationshipLabel>
        <relationshipName>Press_Runs</relationshipName>
        <type>Lookup</type>
    </CustomField>