force-app/main/default/objects/Press_Run__c/fields/Press_Date__c.field-meta.xml
<CustomField>
        <fullName>Press_Date__c</fullName>
        <description>Date for this run</description>
        <label>Press Date</label>
        <type>Date</type>
    </CustomField>