force-app/main/default/objects/Press_Run__c/fields/Pub_Code__c.field-meta.xml
<CustomField>
        <fullName>Pub_Code__c</fullName>
        <label>Pub Code</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>