force-app/main/default/objects/Press_Run__c/fields/Publication__c.field-meta.xml
<CustomField>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The publication being delivered</description>
        <label>Publication</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Press Runs</relationshipLabel>
        <relationshipName>Press_Runs</relationshipName>
        <type>Lookup</type>
    </CustomField>