force-app/main/default/objects/Press_Run__c/fields/Rate__c.field-meta.xml
<CustomField>
        <fullName>Rate__c</fullName>
        <description>Rate for this publication</description>
        <label>Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>