force-app/main/default/objects/Press_Run__c/fields/Subscription__c.field-meta.xml
<CustomField>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription for this delivery</description>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Press Runs</relationshipLabel>
        <relationshipName>Press_Runs</relationshipName>
        <type>Lookup</type>
    </CustomField>